May 10th 2024:
Commit:
-Maven execution fixed. The tests are running now from maven and the console displayed the test status
-Cluecumber report added. Check the html file in $projectPath/GeneratedReport folder, after the test execution.